add number of basic tests and refactored
In order to get some tests working a small amount of refactoring was performed.
some dummy data and error handling added to the backend and api
